# ca3d

./: .gitignore  Cargo.toml  README.md  index.html
patches/: macos-naga-fixes.patch
src/: chunk.rs  chunk_datastore.rs  chunk_manager.rs  game.rs  key_tracker.rs  lib.rs  main.rs  profiler.rs  resource_size_helper.rs  shared_resource_helper.rs  user_event.rs  util.rs  wgpu_context.rs
src/gpu_stage/: bloom.rs  bloom.wgsl  meshing.wgsl  meshing_render.rs  mod.rs  overlay.rs  overlay.wgsl  picker.rs  picker.wgsl  render.wgsl  simulate.rs  simulate.wgsl  tonemap.rs  tonemap.wgsl
