[package]
name = "ca3d"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", branch = "master" }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "master" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", branch = "master" }

[dependencies]
env_logger = "0.10"
log = "0.4"
egui = "0.25.0"
egui-wgpu = "0.25.0"
egui-winit = { version = "0.25.0", default-features = false, features = [
    "wayland",
    "x11",
    "links",
] }
winit = { version = "0.29", features = ["default"] }
wgpu = { version = "0.19.0", features = ["naga-ir"] }
bytemuck = "1.14"
nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"] }
pod-enum = "0.1.0"
rand = "0.8.5"
indexmap = "2.1.0"
egui_extras = "0.25.0"
naga = "0.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
egui-winit = { version = "0.25.0", features = ["clipboard"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "=0.2.90"
wasm-bindgen-futures = "=0.4.40"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}
