[package]
name = "ca3d"
version = "0.1.0"
authors = []
edition = "2021"
build = "build.rs"

[build-dependencies]
cargo-patch = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = { version = "0.26.2", default-features = false, features = [
    "wayland",
    "x11",
    "links",
] }
winit = { version = "0.29.15", features = ["default"] }
wgpu = { version = "0.19.1", features = ["naga-ir"] }
bytemuck = "1.15.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
pod-enum = "0.1.0"
rand = "0.8.5"
indexmap = "2.2.5"
egui_extras = "0.26.2"
naga = "0.19.2"

[package.metadata.patch.naga]
version = "0.19.2"
patches = [
    { path = "patches/macos-naga-fixes.patch", source = "GithubPrDiff" },
]

[patch.crates-io]
naga = { path = './target/patch/naga-0.19.2' }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
egui-winit = { version = "0.26.2", features = ["clipboard"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "=0.2.90"
wasm-bindgen-futures = "=0.4.40"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}
